[tool.poetry]
name = "datecycles"
version = "0.1.2"
description = "Simple library for complicated date cycling rules"
license = "MIT"
authors = ["Niko Järvinen <nbjarvinen@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/b10011/datecycles"
repository = "https://github.com/b10011/datecycles"
documentation = "https://github.com/b10011/datecycles"
keywords = ["date", "time", "calendar", "cycling"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^1.1.1"
holidays = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
